<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddRecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Users can enter the title of their recipe-->
        <EditText
            android:id="@+id/editText_addTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Users can enter the nationality of their recipe-->
        <EditText
            android:id="@+id/editText_addNationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_nationality"
            app:layout_constraintTop_toBottomOf="@id/editText_addTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Users can enter the instructions for their recipe-->
        <EditText
            android:id="@+id/editText_addInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_instructions"
            app:layout_constraintTop_toBottomOf="@id/editText_addNationality"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Button to add the recipe to the database-->
        <Button
            android:id="@+id/button_addRecipeToDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_add_recipe"
            app:layout_constraintTop_toBottomOf="@id/editText_addInstructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>