<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecipeDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Displays the image of the recipe-->
        <ImageView
            android:id="@+id/imageView_Recipe"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"/>

        <!-- Card view to hold the title of the recipe -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/imageView_Recipe"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--  Text view to display the title label -->
                <TextView
                    android:id="@+id/label_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/label_title"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView_Recipe"
                    tools:ignore="NotSibling" />

                <!-- Text view to display the title of the recipe -->
                <TextView
                    android:id="@+id/textView_RecipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text=""
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/card_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_title"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- Card view to hold the nationality of the recipe -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_nationality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/imageView_Recipe"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Text view to display the title nationality label -->
                <TextView
                    android:id="@+id/label_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/label_nationality"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView_Recipe"
                    tools:ignore="NotSibling" />

                <!-- Text view to display the nationality of the recipe -->
                <TextView
                    android:id="@+id/textView_RecipeNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text=""
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/card_nationality"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_nationality"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- Text view to display the instructions label   -->
        <TextView
            android:id="@+id/label_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_instructions"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/card_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <!--  Card view to hold the instructions  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/label_instructions"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Text view to display the instructions -->
                <TextView
                    android:id="@+id/textView_RecipeInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:layout_constraintTop_toTopOf="@id/card_instructions"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    tools:ignore="NotSibling" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!--Button for the source of the recipe  -->
        <Button
            android:id="@+id/button_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_source"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_instructions"/>

        <!--Button for the youtube video of the recipe  -->
        <Button
            android:id="@+id/button_youtube"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/text_youtube"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_source"
            app:layout_constraintTop_toBottomOf="@id/card_instructions"
            app:layout_constraintWidth_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>